# deepagents

./: .gitignore  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
assets/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
assets/scripts/: render-all-vertical.mjs  render-all.mjs  render-posters-vertical.mjs  render-posters.mjs
assets/social/: social-posting-kit.md  social-posting-manifest.json
assets/src/: Root.tsx
assets/src/components/: AnimatedBackground.tsx  CalloutPanel.tsx  CodeWindow.tsx  ComparisonPanel.tsx  DatabaseTable.tsx  FeatureCards.tsx  FlowPanel.tsx  GlassPanel.tsx  MusicBed.tsx  OutroCard.tsx  PanelRenderer.tsx  PathRouterDiagram.tsx  SceneHeader.tsx  TerminalWindow.tsx  VerticalHeader.tsx  VerticalOutro.tsx  (+3 more)
assets/voiceover/: campaign-voiceover.md
examples/oracle_agent/: README.md  agent.py  agent_ollama.py  requirements.txt
libs/partners/oracle/: Makefile  pyproject.toml
libs/partners/oracle/deepagents_oracle/: __init__.py  _version.py  agent.py  backend.py  config.py  connection.py  schema.py  vector.py
libs/partners/oracle/skills/oracle-data-analyst/: SKILL.md
libs/partners/oracle/skills/oracle-health-monitor/: SKILL.md
libs/partners/oracle/skills/oracle-knowledge-ingest/: SKILL.md
libs/partners/oracle/skills/oracle-memory-search/: SKILL.md
libs/partners/oracle/skills/oracle-multi-agent-memory/: SKILL.md
libs/partners/oracle/skills/oracle-session-resume/: SKILL.md
libs/partners/oracle/skills/research-and-remember/: SKILL.md
libs/partners/oracle/tests/integration_tests/: test_oracle_live.py
libs/partners/oracle/tests/unit_tests/: test_agent.py  test_backend.py  test_config.py  test_connection.py  test_schema.py  test_skills.py  test_vector.py
oracle/: .env.example  docker-compose.yml
oracle/scripts/: setup-oracle.sh
(+8 files in other folders)
