[project]
name = "deepagents-oracle"
version = "0.1.0a1"
description = "Oracle AI Database backend for Deep Agents. Persistent memory, conversation history, and vector search."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
keywords = ["agents", "oracle", "ai", "llm", "deepagents", "langchain", "vector-search"]
dependencies = [
    "deepagents>=0.5.0a1",
    "oracledb>=2.5.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
vector = [
    "langchain-oracledb>=0.2.0",
]

[dependency-groups]
test = [
    "pytest>=7.3.0,<9.0.0",
    "pytest-cov",
    "pytest-socket",
    "pytest-xdist",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.2,<0.16.0",
    "ty>=0.0.1,<1.0.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepagents_oracle*", "skills*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
"skills" = ["*/SKILL.md"]

[tool.uv.sources]
deepagents = { path = "../../deepagents", editable = true }

[tool.ruff]
line-length = 150

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "PERF203",
    "SLF001",
    "PLR0913",
    "PLC0414",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "ANN202", "ARG002", "D1", "PLR2004", "PT018", "S101", "S311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["../../deepagents"]
